menu模糊查询